[gd_scene load_steps=13 format=3 uid="uid://dyy3d4ih2jjg8"]

[ext_resource type="Script" uid="uid://dh5v3mh50aex" path="res://main_scene/game_scene.gd" id="1_v1wow"]
[ext_resource type="Texture2D" uid="uid://c8y5ha6pxxsln" path="res://main_scene/backgroundColorForest.png" id="2_j5hk1"]
[ext_resource type="PackedScene" uid="uid://wtcdc5r5wspd" path="res://Runners/basic_runner.tscn" id="3_mj2jn"]
[ext_resource type="PackedScene" uid="uid://dasmqhuk23sr3" path="res://Obstacles/Mobs/slime_mob.tscn" id="4_mixcd"]
[ext_resource type="PackedScene" uid="uid://3e5fu37docg2" path="res://Obstacles/Mobs/fly_mob.tscn" id="5_mj2jn"]
[ext_resource type="PackedScene" uid="uid://cf3l3jg1rwsx" path="res://Obstacles/platform.tscn" id="6_kdryc"]
[ext_resource type="PackedScene" uid="uid://bta7exht03qie" path="res://main_scene/progress_gate.tscn" id="8_e35lh"]
[ext_resource type="PackedScene" uid="uid://ckbr71skloy0f" path="res://UI/menu_controller.tscn" id="9_udeyl"]
[ext_resource type="Texture2D" uid="uid://6ma7q10dayd" path="res://ArtAssets/Platformer Art Complete Pack/Base pack/Tiles/signRight.png" id="10_daj04"]
[ext_resource type="Texture2D" uid="uid://byh418b0f75dc" path="res://Runners/hud_heartFull.png" id="10_miq82"]
[ext_resource type="AudioStream" uid="uid://bfd820qrtlvof" path="res://main_scene/little town - orchestral.ogg" id="11_vjqtn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_miq82"]
size = Vector2(26, 591)

[node name="GameScene" type="Node2D"]
script = ExtResource("1_v1wow")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(575.5, 417)
scale = Vector2(1.12402, 1)
texture = ExtResource("2_j5hk1")

[node name="Boundries" parent="." instance=ExtResource("6_kdryc")]
position = Vector2(288, 616)
scale = Vector2(10, 1)
script = null

[node name="LeftWall" type="StaticBody2D" parent="Boundries"]
position = Vector2(82.3, -610)
scale = Vector2(0.1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundries/LeftWall"]
position = Vector2(-1158, 285.5)
shape = SubResource("RectangleShape2D_miq82")

[node name="ProgressGate" parent="Boundries" instance=ExtResource("8_e35lh")]
position = Vector2(82.3, -610)
scale = Vector2(0.1, 1)

[node name="SignRight" type="Sprite2D" parent="."]
position = Vector2(898, 544)
scale = Vector2(1.62857, 1.08571)
texture = ExtResource("10_daj04")

[node name="Runner" parent="." instance=ExtResource("3_mj2jn")]
position = Vector2(78, 536)

[node name="SlimeMob" parent="." instance=ExtResource("4_mixcd")]
position = Vector2(350, 576)

[node name="FlyMob" parent="." instance=ExtResource("5_mj2jn")]
position = Vector2(848, 348)

[node name="MenuController" parent="." instance=ExtResource("9_udeyl")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LoopDisplay" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 11.0
offset_top = 58.0
offset_right = 114.0
offset_bottom = 122.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Loop 0"
fit_content = true
autowrap_mode = 0

[node name="Taunt" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -219.5
offset_top = 64.0
offset_right = 220.5
offset_bottom = 128.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Come Hero! Enter the castle."
fit_content = true
autowrap_mode = 0

[node name="Heart1" type="Sprite2D" parent="."]
position = Vector2(33, 613)
texture = ExtResource("10_miq82")

[node name="Heart2" type="Sprite2D" parent="."]
position = Vector2(93, 613)
texture = ExtResource("10_miq82")

[node name="Heart3" type="Sprite2D" parent="."]
position = Vector2(153, 613)
texture = ExtResource("10_miq82")

[node name="LoopTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="TimeLeft" type="RichTextLabel" parent="LoopTimer"]
offset_left = 11.0
offset_top = 7.0
offset_right = 216.0
offset_bottom = 71.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Time left: 15s"
fit_content = true
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("11_vjqtn")
autoplay = true
bus = &"Music"
